<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center|top"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="55dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="85dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/logo"
            android:layout_alignTop="@id/logo"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="12dp"
            android:text="@string/slogan"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="660dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_layout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"

            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/WhatsYourName"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#C7BDBB" />

        <EditText
            android:id="@+id/Table"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/Table"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#C7BDBB" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/selectWineText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wine"
                android:textSize="18sp"
                android:padding="16dp"
                android:textColor="?attr/colorOnPrimary"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/edit_text_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/what_size"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/whatsize"
                android:textColor="#2E2626"
                android:textSize="19sp"
                />

            <RadioGroup
                android:id="@+id/sizeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:orientation="horizontal"
                android:padding="20dp">

                <RadioButton
                    android:id="@+id/RB0_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.2" />

                <RadioButton
                    android:id="@+id/RB0_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.4"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/RB0_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.5" />

                <RadioButton
                    android:id="@+id/RB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1л" />
            </RadioGroup>


            <CheckBox
                android:id="@+id/iceCheckBox"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:buttonTint="#2E2626"
                android:text="Лід"
                android:textColor="#2E2626"
                android:textSize="16sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="замовляю!"
                android:layout_gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="275dp"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="#2E2626"
            android:textSize="19sp" />


    </LinearLayout>

    <!--android:gravity="center_horizontal"-->
    <!--android:alpha="0.5"-->
</LinearLayout>
