<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorPrimaryVariant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="85dp"
            android:layout_height="72dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="236dp"
            android:layout_height="71dp"
            android:layout_marginStart="20dp"
            android:text="@string/slogan"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/logo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="353dp"
        android:layout_height="660dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/WhatsYourName"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#C7BDBB" />

        <EditText
            android:id="@+id/Table"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:hint="@string/Table"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#C7BDBB" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/Table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/selectWineText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wine"
                android:textSize="18sp"
                android:padding="16dp"
                android:textColor="?attr/colorOnPrimary"
                android:background="@drawable/edit_text_background"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/edit_text_background"
                android:padding="4dp"
                app:layout_constraintTop_toBottomOf="@id/selectWineText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/what_size"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recyclerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:alpha="0.7"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/whatsize"
                android:textColor="#2E2626"
                android:textSize="19sp" />


            <RadioGroup
                android:id="@+id/sizeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                app:layout_constraintTop_toBottomOf="@id/what_size"
                android:orientation="horizontal"
                android:padding="20dp">

                <RadioButton
                    android:id="@+id/RB0_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.2" />

                <RadioButton
                    android:id="@+id/RB0_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.4"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/RB0_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.5" />

                <RadioButton
                    android:id="@+id/RB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1л" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/iceCheckBox"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:buttonTint="#2E2626"
                android:text="Лід"
                android:textColor="#2E2626"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/sizeRadioGroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="замовляю!"
                app:layout_constraintTop_toBottomOf="@id/iceCheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
